tests/errors/array_02.f90
program array_02
implicit none

print *, [[[], [[]]], [[]], []]

end program
